src/components/layouts/home-layout/style.less
@import '../../../styles/vars.less';
@import '../../../styles/mixins.less';
@import '../../../styles/fonts.less';
@import '../../../styles/containers.less';

.landing {
  .homebackground('home_landing');
}

// Section 3
.challenges {
  .challenges-carousel {
    // text-align: center;
    height: 90vh;
    background: #244c7e;
    overflow: hidden;
  }
  .challenge-item {
    background: #eff8ff;
    .challenge-header {
      padding-top: 50px;
      text-align: center;
    }
  }

  .ant-carousel .slick-dots li.slick-active button {
    border-radius: 50%;
    height: 20px;
    width: 20px;
    margin-left: 30px;
  }
  .ant-carousel .slick-dots li button {
    border-radius: 50%;
    height: 20px;
    width: 20px;
    margin-left: 30px;
  }
  .ant-carousel .slick-dots {
    height: 5vh;
  }
}

